<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.stubhub</groupId>
	<artifactId>delivery-simulation</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>delivery simulation app</name>

	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<delivery.simulation.thread.count>1</delivery.simulation.thread.count>
		<delivery.simulation.time.seconds>15</delivery.simulation.time.seconds>
		<delivery.simulation.destination.count>5
		</delivery.simulation.destination.count>
	</properties>

	<build>
		<directory>target</directory>
		<outputDirectory>target/classes</outputDirectory>
		<sourceDirectory>src</sourceDirectory>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>unpack</id>
						<phase>package</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>com.stubhub</groupId>
									<artifactId>delivery-impl</artifactId>
									<version>0.1-SNAPSHOT</version>
									<type>jar</type>
									<overWrite>false</overWrite>
									<outputDirectory>
										${project.build.directory}/classes
									</outputDirectory>
									<includes>**/*.class</includes>
								</artifactItem>
							</artifactItems>
							<outputDirectory>${project.build.directory}/wars
							</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<includeProjectDependencies>true
					</includeProjectDependencies>
					<executable>java</executable>
					<classpathScope>compile</classpathScope>
					<arguments>
						<argument>
							-Ddelivery.simulation.thread.count=${delivery.simulation.thread.count}
						</argument>
						<argument>
							-Ddelivery.simulation.time.seconds=${delivery.simulation.time.seconds}
						</argument>
						<argument>
							-Ddelivery.simulation.destination.count=${delivery.simulation.destination.count}
						</argument>
						<argument>-Xms512m</argument>
						<argument>-Xmx512m</argument>
						<argument>-XX:NewRatio=3</argument>
						<argument>-XX:+PrintGCTimeStamps</argument>
						<argument>-XX:+PrintGCDetails</argument>
						<argument>-Xloggc:gc.log</argument>
						<argument>-classpath</argument>
						<classpath/>
						<argument>com.stubhub.delivery.simulation.Simulation
						</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.stubhub</groupId>
			<artifactId>delivery-core</artifactId>
			<version>0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.stubhub</groupId>
			<artifactId>delivery-impl</artifactId>
			<version>0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.stubhub</groupId>
			<artifactId>delivery-inject</artifactId>
			<version>0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>